load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("//bazel/oci:go_multi_arch_image.bzl", "go_multi_arch_image")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/bpalermo/envoy-filters/ext-proc/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "@envoy_api//envoy/service/ext_proc/v3:pkg_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_multi_arch_image(
    name = "server",
    repository = "palermo/envoy-filters-ext-proc",
    visibility = ["//visibility:public"],
)
